[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/game/GameSpace.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/entities/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menus/pause/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menus/gameover/GameOverMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui-game/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/levelup.mp3" type="AudioStream" id=7]
[ext_resource path="res://scenes/ui-game/Countdown.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui-bits/FullAlert.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/entities/indicator/IndicatorArrow.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/game/GameMusic.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/menus/upgrades/Upgrades.tscn" type="PackedScene" id=16]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -12.0127, 0, -9.94931, 0, 0, 0, 0, 0, 0, 12.0127, 0, -9.94931, 0, 0, 0, 0, 0, 0, -12.0127, 0, -9.94931 ),
"tilts": PoolRealArray( 0, 0, 0 )
}

[node name="Game" type="Node"]
pause_mode = 1
script = ExtResource( 2 )

[node name="GameMusic" parent="." instance=ExtResource( 13 )]

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="GameSpace" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="IndicatorArrow" parent="GameSpace" instance=ExtResource( 10 )]
visible = false

[node name="Player" parent="GameSpace" instance=ExtResource( 3 )]

[node name="SpawnLine" type="Path" parent="GameSpace"]
curve = SubResource( 1 )

[node name="PathFollow" type="PathFollow" parent="GameSpace/SpawnLine"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.0127, 0, -9.94931 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="TutorialAlert" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Countdown" parent="." instance=ExtResource( 8 )]

[node name="Upgrades" parent="." instance=ExtResource( 16 )]
pause_mode = 2

[node name="GameOverMenu" parent="." instance=ExtResource( 5 )]

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="ammo_changed" from="GameSpace/Player" to="." method="_on_Player_ammo_changed"]
[connection signal="died" from="GameSpace/Player" to="." method="_on_Player_died"]
[connection signal="health_changed" from="GameSpace/Player" to="." method="_on_Player_health_changed"]
[connection signal="set_modifier" from="GameSpace/Player" to="." method="_on_Player_set_modifier"]
[connection signal="finished" from="Countdown" to="." method="_on_Countdown_finished"]
[connection signal="request_player_stats" from="Upgrades" to="." method="_on_Upgrades_request_player_stats"]
[connection signal="subtract_coins" from="Upgrades" to="." method="_on_Upgrades_subtract_coins"]
[connection signal="upgrade_damage" from="Upgrades" to="." method="_on_Upgrades_upgrade_damage"]
[connection signal="upgrade_health" from="Upgrades" to="." method="_on_Upgrades_upgrade_health"]
[connection signal="done_opening" from="GameOverMenu" to="." method="_on_GameOverMenu_done_opening"]
